Vocubulary Lesson Section Almost Completed

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
       </nav>
     </header>
     <main>
+      <!-- Banner Section -->
       <section
         class="flex flex-col-reverse md:flex-row gap-10 justify-between items-center py-5 w-11/12 mx-auto"
       >
@@ -138,7 +139,39 @@
           <img src="assets/hero-student.png" alt="" />
         </div>
       </section>
+      <!-- Let's Learn Section -->
+      <section>
+        <h2 class="text-4xl font-bold mb-8 text-center">
+          <span class="text-sky-400">Let's</span> Learn Vocabularies
+        </h2>
+        <div
+          id="level-container"
+          class="flex gap-5 flex-wrap justify-center"
+        ></div>
+      </section>
+      <!-- Lesson Details & Background -->
+      <section
+        id="word-container"
+        class="bg-gray-100 p-10 w-11/12 mx-auto my-10 grid grid-cols-3 gap-5"
+      >
+        <div
+          class="bg-white rounded-xl shadow-sm text-center py-10 px-5 space-y-4"
+        >
+          <h2 class="font-bold text-2xl">Eager</h2>
+          <p class="font-semibold">Meaning / Pronounciation</p>
+          <div class="text-2xl font-medium font-bangla">আগ্রহী / ইগার</div>
+          <div class="flex justify-between items-center">
+            <button class="btn bg-[#1A91FF10] hover:bg-[#1A91FF80]">
+              <i class="fa-solid fa-circle-info"></i>
+            </button>
+            <button class="btn bg-[#1A91FF10] hover:bg-[#1A91FF80]">
+              <i class="fa-solid fa-volume-high"></i>
+            </button>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
+    <script src="./Script/index.js"></script>
   </body>
 </html>
